--- a/app/src/main/res/layout/player_edit_fragment.xml
+++ b/app/src/main/res/layout/player_edit_fragment.xml
@@ -501,8 +501,8 @@
             style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/new_player_button"
-            android:layout_alignTop="@+id/new_player_button"
+            android:layout_alignBottom="@+id/edit_player_save_changes"
+            android:layout_alignTop="@+id/edit_player_save_changes"
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
     </RelativeLayout>
