Fixed change password Introduced log in and log out Updated icons

--- a/app/src/main/res/layout/forgot_password_activity.xml
+++ b/app/src/main/res/layout/forgot_password_activity.xml
@@ -35,14 +35,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/large_button"
-            android:text="Change Password"/>
+            android:text="Check Passcode"/>
         <ProgressBar
             android:id="@+id/forgot_password_change_progress"
             style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/register_register"
-            android:layout_alignTop="@+id/register_register"
+            android:layout_alignBottom="@+id/forgot_password_change"
+            android:layout_alignTop="@+id/forgot_password_change"
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
     </RelativeLayout>
@@ -62,8 +62,8 @@
             style="?android:attr/progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/register_register"
-            android:layout_alignTop="@+id/register_register"
+            android:layout_alignBottom="@+id/forgot_password_request"
+            android:layout_alignTop="@+id/forgot_password_request"
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
     </RelativeLayout>
