Added sorting for playerList and teamList

--- a/app/src/main/res/layout/player_list_fragment.xml
+++ b/app/src/main/res/layout/player_list_fragment.xml
@@ -9,107 +9,322 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
+            android:id="@+id/player_list_headers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
+            <RelativeLayout
+                android:id="@+id/player_list_name_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_name_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_name"
+                    android:layout_toEndOf="@id/player_list_name"
+                    android:button="@drawable/ic_keyboard_arrow_up"
+                    android:checked="true"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/player_list_position_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Position"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_position"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Position"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_position_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_position"
+                    android:layout_toEndOf="@id/player_list_position"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/player_list_price_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Price"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Price"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_price_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_price"
+                    android:layout_toEndOf="@id/player_list_price"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/player_list_team_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Team"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_team"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Team"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_team_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_team"
+                    android:layout_toEndOf="@id/player_list_team"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_points_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Points"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_points"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Points"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_points_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_points"
+                    android:layout_toEndOf="@id/player_list_points"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_apps_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Apps"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_apps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Apps"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_apps_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_apps"
+                    android:layout_toEndOf="@id/player_list_apps"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_subs_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Subs"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_subs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Subs"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_subs_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_subs"
+                    android:layout_toEndOf="@id/player_list_subs"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_goals_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Goals"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_goals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Goals"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_goals_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_goals"
+                    android:layout_toEndOf="@id/player_list_goals"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_assists_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Assists"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_assists"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Assists"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_assists_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_assists"
+                    android:layout_toEndOf="@id/player_list_assists"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_clean_sheets_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Clean Sheets"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_clean_sheets"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Clean Sheets"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_clean_sheets_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_clean_sheets"
+                    android:layout_toEndOf="@id/player_list_clean_sheets"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_motms_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Motms"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_motms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MOTMS"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_motms_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_motms"
+                    android:layout_toEndOf="@id/player_list_motms"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_yellows_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Yellows"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_yellows"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Yellows"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_yellows_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_yellows"
+                    android:layout_toEndOf="@id/player_list_yellows"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_reds_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Reds"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
-            <TextView
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_reds"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reds"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_reds_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_reds"
+                    android:layout_toEndOf="@id/player_list_reds"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/player_list_own_goals_layout"
                 android:layout_width="@dimen/row_width"
-                android:layout_height="wrap_content"
-                android:text="Own Goals"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:gravity="center"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/player_list_own_goals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Own Goals"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                <CheckBox
+                    android:id="@+id/players_list_own_goals_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/player_list_own_goals"
+                    android:layout_toEndOf="@id/player_list_own_goals"
+                    android:visibility="gone"
+                    android:clickable="false"/>
+
+            </RelativeLayout>
         </LinearLayout>
         <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:id="@+id/player_recycler_view"
