--- a/app/src/main/res/layout/player_row.xml
+++ b/app/src/main/res/layout/player_row.xml
@@ -9,20 +9,17 @@
         android:id="@+id/list_player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_team"
         android:layout_width="wrap_content"
@@ -33,60 +30,50 @@
         android:id="@+id/list_player_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_apps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_subs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_goals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_assists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_clean_sheets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_motms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_yellow_cards"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_red_cards"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
     <TextView
         android:id="@+id/list_player_own_goals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:width="@dimen/row_width"
-        android:gravity="center"/>
+        android:width="@dimen/row_width"/>
 </LinearLayout>
